clusters/contabo-mkt/tenants/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  namespace: tenant-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: test.omani.rest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack-x-tenant-test-x-vcluster
                port:
                  number: 80
          - path: /bookstack
            pathType: Prefix
            backend:
              service:
                name: bookstack-x-tenant-test-x-vcluster
                port:
                  number: 80
  tls:
    - hosts:
        - test.omani.rest
      secretName: tenant-test-tls
